src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_GlobalOverflow-StashIr.error
error: Integer literal exceeds global maximum limit (u64_max).
--> main.hs:7:16
  | 
7 |         return 18446744073709551616;
  |                ^^^^^^^^^^^^^^^^^^^^
